Update containerization apple main (#4)
Signed-off-by: Kathryn Baldauf <k_baldauf@apple.com>

--- a/.github/workflows/docs-release.yaml
+++ b/.github/workflows/docs-release.yaml
@@ -1,22 +1,31 @@
+# Manual workflow for releasing docs ad-hoc. Workflow can only be run for main or release branches. 
+# Workflow does NOT publish a release of containerization.
 name: Deploy application website
 on: 
-  push: 
-    tags:
-      - "[0-9]+.[0-9]+.[0-9]+"
+  workflow_dispatch:
+
 permissions:
   contents: read
   packages: write
   pages: write
 
 jobs: 
+  checkBranch:
+    runs-on: ubuntu-latest
+    if: github.ref == 'refs/heads/main' || startsWith(github.ref, 'ref/heads/release')
+    steps:
+      - name: Branch validation 
+        run: echo "Branch ${{ github.ref_name }} is allowed"
+
   buildSite:
     name: Build application website
+    needs: checkBranch
     uses: ./.github/workflows/containerization-build-template.yml
     secrets: inherit
 
-  deploy:
+  deployDocs:
     runs-on: ubuntu-latest
-    needs: buildSite
+    needs: [checkBranch, buildSite]
 
     environment:
       name: github-pages
