Add id token for deploying docs (#18)
Signed-off-by: Kathryn Baldauf <k_baldauf@apple.com>

--- a/.github/workflows/docs-release.yaml
+++ b/.github/workflows/docs-release.yaml
@@ -27,8 +27,8 @@ jobs:
     needs: [checkBranch, buildSite]
     permissions:
       contents: read
-      packages: write
       pages: write
+      id-token: write
 
     environment:
       name: github-pages
