Fix refs parsing in gh action (#20)
Remove erroneous quotes when checking for wildcard match in GitHub
action

Signed-off-by: Kathryn Baldauf <k_baldauf@apple.com>

--- a/.github/workflows/build-test-images.yml
+++ b/.github/workflows/build-test-images.yml
@@ -34,7 +34,7 @@ jobs:
     steps:
       - name: Check branch 
         run: |
-          if [ '${{ github.ref }}' != 'refs/heads/main' ] && [[ '${{ github.ref }}' != 'refs/heads/release*' ]] && [ ${{ inputs.publish }} == true ]; then
+          if [ '${{ github.ref }}' != 'refs/heads/main' ] && [[ '${{ github.ref }}' != refs/heads/release* ]] && [ ${{ inputs.publish }} == true ]; then
             echo "Cannot publish an image if we are not on main or a release branch."
             exit 1
           fi
