--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -5,11 +5,6 @@ on:
     tags:
       - "[0-9]+.[0-9]+.[0-9]+"
 
-permissions:
-  contents: read
-  packages: write
-  pages: write
-
 jobs: 
   containerization:
     uses: ./.github/workflows/containerization-build-template.yml
@@ -17,9 +12,17 @@ jobs:
       release: true
       version: ${{ github.ref_name }}
     secrets: inherit
+    permissions:
+      contents: read
+      packages: write
+      pages: write
   deployDocs:
     runs-on: ubuntu-latest
     needs: containerization
+    permissions:
+      contents: read
+      pages: write
+      id-token: write
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
